# code_explainer

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
knowledge/plantuml_help/: C4_component_diagram.txt  blckly-component-diagram.puml  component-sample1.puml  sample-sequence1.puml
knowledge/sonarqube_json/: data.json
src/code_explainer/: crew.py  main.py
src/code_explainer/config/: agents.yaml  tasks.yaml
src/code_explainer/tools/: plantuml_tool.py
src/code_explainer/utils/: repo_loader.py  sonarqhube_tool.py  storage_config.py  storage_qdrant.py  utils.py
tests/: test_loader.py  test_sonarqube.py  test_storage_config.py  test_utils.py
