[project]
name = "code_explainer"
version = "0.1.0"
description = "code-explainer using crewAI"
authors = [{ name = "Nicola Procopio", email = "nicola.procopio@acsoftware.it" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "plantweb>=1.2",
    "gitpython==3.1.44",
    "esprima==4.0.1",
    "tree-sitter==0.24.0",
    "tree-sitter-languages==1.10.2",
    "panel==1.6.0",
    "google-generativeai==0.8.4",
    "groq==0.25.0",
    "pytest==8.2.1",
    "qdrant-client[fastembed]==1.13.2",
    "fitz",
    "pymupdf==1.25.3",
    "javalang",
    "streamlit==1.43.2",
]

[project.scripts]
code_explainer = "code_explainer.main:run"
run_crew = "code_explainer.main:run"
train = "code_explainer.main:train"
replay = "code_explainer.main:replay"
test = "code_explainer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
